2004-08-18  Volker Dobler  <v.dobler@web.de>

	* src/term.c (term_end_plot term_start_multiplot term_end_multiplot):
	Implement auto-layout of multiplots with specified number of rows
	and columns.

	* docs/gnuplot.doc demo/layout.dem:  Document and illustrate use 
	of 'set multiplot layout'.

2004-08-18  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: More consistent handling of default background and font.

2004-08-17  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c (real imag magnitude angle):  Move error message handling
	into default case of switch statements (prevents compiler warnings).

	* src/plot2d.c (eval_plots) src/graphics.c (init_histogram):
	Replace instance of isstring + quote_str with try_to_get_string().
	Make histogram_title a dynamically allocated string rather than a fixed
	length char constant. 

2004-08-15  Ethan Merritt  <merritt@u.washington.edu>

	* demo/histograms.dem: Revise bmargin settings to work with the revised
	bmargin handling in graphics.c (2004-07-25).

	* src/plot2d.c (eval_plots): Fixed bug in "newhistogram 'title' ..."
	that caused the title to be ignored if there were no other options
	specified.

2004-08-13  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/term.c (enhanced_recursion): Pass unescaped backslash character
	through to PostScript output in enhanced text mode. This is necessary
	for Shift-JIS character encoding to work in enhanced mode (the non-
	enhanced mode already does this). Bug report #998479.

2004-08-13  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Re-word the filledcurves section according to
	suggestions from Petr Mikulik.

	* term/post.trm:  Rename new option once again: set term post {level1}
	(naming history: nolevel2 -> ai -> level1). Audit code to confirm that
	in fact it excutes only commands required by PostScript Level 1.

	* src/save.c (save_tics) src/show.c (show_tics): Save tic level for 
	each explicit user-added tic. Fixes bug #1008869.
